<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountManager.account3"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/abhaya_libre_extrabold"
                android:text="First Aid Techniques you know"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left">

                <CheckBox
                    android:id="@+id/heart_attack_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HEART_ATTACK_STRING"
                    android:padding="10dp"
                    android:checked="false"
                    android:textSize="20sp"
                    />
                <CheckBox
                    android:id="@+id/snake_Bite_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SNAKE_BITE_STRING"
                    android:padding="10dp"
                    android:checked="false"
                    android:textSize="20sp"/>
                <CheckBox
                    android:id="@+id/bleeding_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BLEEDING_STRING"
                    android:padding="10dp"
                    android:checked="false"
                    android:textSize="20sp"/>
                <CheckBox
                    android:id="@+id/drowned_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DROWNED_STRING"
                    android:padding="10dp"
                    android:checked="false"
                    android:textSize="20sp"/>
                <CheckBox
                    android:id="@+id/stroke_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/STROKE_STRING"
                    android:padding="10dp"
                    android:checked="false"
                    android:textSize="20sp"/>
                <CheckBox
                    android:id="@+id/convulsions_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CONVULSIONS_STRING"
                    android:padding="10dp"
                    android:checked="false"
                    android:textSize="20sp"/>
                <CheckBox
                    android:id="@+id/burns_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BURNS_STRING"
                    android:padding="10dp"
                    android:checked="false"
                    android:textSize="20sp"/>
                <CheckBox
                    android:id="@+id/traumaticheadinjury_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TRAUMATIC_HEAD_INJURY_STRING"
                    android:padding="10dp"
                    android:checked="false"
                    android:textSize="20sp"/>


            </LinearLayout>

            <Button
                android:id="@+id/first_aid_finish_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text=" Finish "
                android:textSize="30sp"
                android:textColor="@color/white"/>

        </LinearLayout>




    </ScrollView>



</LinearLayout>